samples/_failures_safe/1761401945_e4d7a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9dc83d6.c: In function ‘main’:
./samples/SAFE/__tmp_a9dc83d6.c:170:5: error: expected declaration or statement at end of input
  170 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_a9dc83d6.c:170:5: error: expected declaration or statement at end of input
